--- a/newpage.html
+++ b/newpage.html
@@ -6,14 +6,14 @@
     </head>
     </html>
 <body>
-<h1>პირველი სათაური</h1>
-<h2>მეორე სათაური</h2>
-<h3>მესამე სათაური</h3>
-<h4>მეოთხე</h4>
-<h5>მეხუთე</h5>
-<h6>მეექვსე</h6>
+<h1>new page</h1>
+<h2>transfer</h2>
+
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores debitis reiciendis qui voluptate dolorum quod dolore ut cumque, porro repellat quaerat ducimus hic, temporibus asperiores, laudantium cupiditate quas dolorem ipsam.
     
 </p>
-<a href="newpage.html" target="_blank">new page</a>
+<a href="https://github.com/mfndo2xg" target="_blank">new page</a>
+<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FImage&psig=AOvVaw3-ChsxQ1x31ZA9BgNV-Ki0&ust=1650567430125000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCODl8Pyoo_cCFQAAAAAdAAAAABAD=
+"
 </body>
+</html>
