--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores debitis reiciendis qui voluptate dolorum quod dolore ut cumque, porro repellat quaerat ducimus hic, temporibus asperiores, laudantium cupiditate quas dolorem ipsam.
     
 </p>
-<a href="newpage.html" target="_blank">new page</a>
+<a href="ne" target="_blank">new page</a>
 </body>
