--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>pele</title>
-    </head>
-    </html>
+
+<head>
+    <meta charset="utf-8">
+    <title>pele</title>
+</head>
+
 <body>
-<h1>პირველი სათაური</h1>
-<h2>მეორე სათაური</h2>
-<h3>მესამე სათაური</h3>
-<h4>მეოთხე</h4>
-<h5>მეხუთე</h5>
-<h6>მეექვსე</h6>
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores debitis reiciendis qui voluptate dolorum quod dolore ut cumque, porro repellat quaerat ducimus hic, temporibus asperiores, laudantium cupiditate quas dolorem ipsam.
-    
-</p>
-<a href="ne" target="_blank">new page</a>
+    <h1>პირველი სათაური</h1>
+    <h2>მეორე სათაური</h2>
+    <h3>მესამე სათაური</h3>
+    <h4>მეოთხე</h4>
+    <h5>მეხუთე</h5>
+    <h6>მეექვსე</h6>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores debitis reiciendis qui voluptate dolorum quod
+        dolore ut cumque, porro repellat quaerat ducimus hic, temporibus asperiores, laudantium cupiditate quas dolorem
+        ipsam.
+
+    </p>
+    <a href="ne" target="_blank">new page</a>
 </body>
+
+</html>
