--- a/og.html
+++ b/og.html
@@ -1,10 +1,15 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-<meta charset="utf-8">
-<title>og</title>
-</head>
-<html>
+
 <body>
-<h1>RUSSIAN WARSHIP</h1>
-<h2>IDINAKHUY!</h2>
+
+</body>
+
+</html>
