--- a/og.html
+++ b/og.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>og</title>
+    <title>pele</title>
+
 </head>
 
 <body>
-    <h1>Russian warship</h1>
-    <h2>IDINAKHUY</h2>
-    <h3>.</h3>
+    <h1>putin khuylo</h1>
+    <h2>hahaha</h2>
+
 </body>
 
 </html>
